--- a/chatting.html
+++ b/chatting.html
@@ -47,15 +47,40 @@
     <main class="main-screen main-chat">
       <div class="chatting__timestamp">Tuesday, June 30, 2021</div>
       <div class="message-row">
-        <img
-          src="https://images.unsplash.com/photo-1640094289612-38cad00d4db8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"
-          alt=""
-        />
+        <a href="friend-profile.html">
+          <img
+            src="https://images.unsplash.com/photo-1640094289612-38cad00d4db8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"
+            alt=""
+          />
+        </a>
         <div class="message-row__content">
           <span class="message__author"> Friend </span>
           <div class="message__info">
             <span class="message__bubble">Hi!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">10:00</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row message-row__own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">10:05</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row">
+        <a href="friend-profile.html">
+          <img
+            src="https://images.unsplash.com/photo-1640094289612-38cad00d4db8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"
+            alt=""
+          />
+        </a>
+        <div class="message-row__content">
+          <span class="message__author"> Friend </span>
+          <div class="message__info">
+            <span class="message__bubble">what are you doing?</span>
+            <span class="message__time">11:30</span>
           </div>
         </div>
       </div>
