--- a/friends.html
+++ b/friends.html
@@ -48,11 +48,13 @@
     <main class="main-screen">
       <div class="user-component">
         <div class="user-component__column">
-          <img
-            class="user-component__avatar user-component__avatar--xl"
-            src="https://images.unsplash.com/photo-1640094289612-38cad00d4db8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"
-            alt="nature_picture"
-          />
+          <a href="my-profile.html">
+            <img
+              class="user-component__avatar user-component__avatar--xl"
+              src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2371&q=80"
+              alt="nature_picture"
+            />
+          </a>
           <div class="user-component__text">
             <h4 class="user-component__user-name">Nature</h4>
             <h6 class="user-component__state">hi</h6>
@@ -67,11 +69,13 @@
         </div>
         <div class="user-component">
           <div class="user-component__column">
-            <img
-              class="user-component__avatar user-component__avatar--sm"
-              src="https://images.unsplash.com/photo-1640094289612-38cad00d4db8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"
-              alt="nature_picture"
-            />
+            <a href="friend-profile.html">
+              <img
+                class="user-component__avatar user-component__avatar--sm"
+                src="https://images.unsplash.com/photo-1640094289612-38cad00d4db8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"
+                alt="nature_picture"
+              />
+            </a>
             <div class="user-component__text">
               <h4
                 class="
