--- a/friends.html
+++ b/friends.html
@@ -32,10 +32,10 @@
     <header class="screen-header">
       <h1 class="screen-header__title">Friends</h1>
       <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-search"></i></span>
+        <span><i class="fas fa-music"></i></span>
         <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+          ><a href="settings.html"><i class="fas fa-cog"></i></a
         ></span>
       </div>
     </header>
@@ -100,27 +100,30 @@
       <ul class="navbar__list">
         <li class="navbar__btn">
           <a class="navbar__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i
+            ><i class="fas fa-user"></i
           ></a>
         </li>
         <li class="navbar__btn">
           <a class="navbar__link" href="chat.html">
             <span class="navbar__notification badge">1</span>
-            <i class="far fa-comment fa-2x"></i
+            <i class="far fa-comment"></i
           ></a>
         </li>
         <li class="navbar__btn">
           <a class="navbar__link" href="find.html"
-            ><i class="fas fa-search fa-2x"></i
+            ><i class="fas fa-search"></i
           ></a>
         </li>
         <li class="navbar__btn">
           <a class="navbar__link" href="more.html">
-            <div class="small-badge"></div>
-            <i class="fas fa-ellipsis-h fa-2x"></i
+            <!-- <div class="small-badge"></div> -->
+            <i class="fas fa-ellipsis-h"></i
           ></a>
         </li>
       </ul>
     </nav>
+    <div class="splash-screen">
+      <i class="fab fa-pagelines"></i>
+    </div>
   </body>
 </html>
