--- a/chat.html
+++ b/chat.html
@@ -32,11 +32,11 @@
     <header class="screen-header chat-header">
       <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-search"></i></span>
+        <span><i class="far fa-comment-dots"></i></span>
+        <span><i class="fas fa-music"></i></span>
         <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+          ><a href="settings.html"><i class="fas fa-cog"></i></a
         ></span>
       </div>
     </header>
@@ -83,7 +83,7 @@
         </li>
         <li class="navbar__btn">
           <a class="navbar__link" href="more.html">
-            <div class="small-badge"></div>
+            <!-- <div class="small-badge"></div> -->
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
