--- a/chatting.html
+++ b/chatting.html
@@ -32,15 +32,15 @@
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="chat.html">
-          <i class="fas fa-angle-left fa-3x"></i>
+          <i class="fas fa-angle-left"></i>
         </a>
       </div>
       <div class="alt-header__column">
         <h1 class="alt-header__title">Friend</h1>
       </div>
       <div class="alt-header__column">
-        <span><i class="fas fa-search fa-2x"></i></span>
-        <span><i class="fas fa-bars fa-2x"></i></span>
+        <span><i class="fas fa-search"></i></span>
+        <span><i class="fas fa-bars"></i></span>
       </div>
     </header>
 
