--- a/find.html
+++ b/find.html
@@ -33,9 +33,9 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <!-- <div class="mini-badge"></div> -->
-        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-search"></i></span>
         <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+          ><a href="settings.html"><i class="fas fa-cog"></i></a
         ></span>
       </div>
     </header>
@@ -113,7 +113,7 @@
         </li>
         <li class="navbar__btn">
           <a class="navbar__link" href="more.html">
-            <div class="small-badge"></div>
+            <!-- <div class="small-badge"></div> -->
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
