--- a/more.html
+++ b/more.html
@@ -33,10 +33,10 @@
       <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <!-- <div class="mini-badge"></div> -->
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-search"></i></span>
+        <span><i class="fas fa-music"></i></span>
         <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+          ><a href="settings.html"><i class="fas fa-cog"></i></a
         ></span>
       </div>
     </header>
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="user-component__column">
-          <i class="far fa-comment-alt fa-2x"></i>
+          <i class="far fa-comment-alt"></i>
         </div>
       </div>
       <div class="icon-row">
