--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
       <input class="login-form__submit" type="submit" value="Log in" />
       <a href="#">Find Nature Talk Account or Password</a>
     </form>
+    <div class="no-mobile">
+      <span>모바일 화면 혹은 600px 이하로 줄여주세요 :)</span>
+    </div>
   </body>
 </html>
