--- a/settings.html
+++ b/settings.html
@@ -32,14 +32,14 @@
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="more.html">
-          <i class="fas fa-angle-left fa-3x"></i>
+          <i class="fas fa-angle-left"></i>
         </a>
       </div>
       <div class="alt-header__column">
         <h1 class="alt-header__title">Settings</h1>
       </div>
       <div class="alt-header__column">
-        <i class="fas fa-search fa-2x"></i>
+        <i class="fas fa-search"></i>
       </div>
     </header>
 
@@ -89,11 +89,14 @@
         </li>
         <li class="navbar__btn">
           <a class="navbar__link" href="more.html">
-            <div class="small-badge"></div>
+            <!-- <div class="small-badge"></div> -->
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
     </nav>
+    <div class="no-mobile">
+      <span>모바일 화면 혹은 600px 이하로 줄여주세요 :)</span>
+    </div>
   </body>
 </html>
