--- a/chat.html
+++ b/chat.html
@@ -89,5 +89,8 @@
         </li>
       </ul>
     </nav>
+    <div class="no-mobile">
+      <span>모바일 화면 혹은 600px 이하로 줄여주세요 :)</span>
+    </div>
   </body>
 </html>
