--- a/chatting.html
+++ b/chatting.html
@@ -85,5 +85,8 @@
         </div>
       </div>
     </main>
+    <div class="no-mobile">
+      <span>모바일 화면 혹은 600px 이하로 줄여주세요 :)</span>
+    </div>
   </body>
 </html>
