--- a/find.html
+++ b/find.html
@@ -40,7 +40,7 @@
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen find-screen">
       <div class="icon-row">
         <div class="icon-row__icons">
           <i class="fas fa-qrcode"></i>
