--- a/more.html
+++ b/more.html
@@ -134,7 +134,7 @@
         </li>
         <li class="navbar__btn">
           <a class="navbar__link" href="more.html">
-            <div class="small-badge"></div>
+            <!-- <div class="small-badge"></div> -->
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
