--- a/more.html
+++ b/more.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>More - Nature Talk</title>
   </head>
-  <body>
+  <body id="more">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>KT</span>
@@ -29,7 +29,7 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
-    <header class="screen-header chat-header">
+    <header class="screen-header">
       <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <!-- <div class="mini-badge"></div> -->
